syntax = "proto3";

package golem;

import "golem/account_id.proto";
import "golem/project_type.proto";

message ProjectData {
  string name = 1;
  AccountId owner_account_id = 2;
  string description = 3;
  string default_environment_id = 4;
  ProjectType project_type = 5;
}
